--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "bcryptjs": "^2.4.3",
     "mongodb": "^4.4.1",
     "next": "12.1.0",
-    "next-auth": "^4.2.1",
+    "next-auth": "3.29.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
